# serial_image_reader

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
